Allow basic workspaces to be created without using internal resources